Avoiding 3 column stack on mobile

--- a/CalendarCompact.scss
+++ b/CalendarCompact.scss
@@ -111,12 +111,6 @@ html.device-mobile {
 		.calendar-header {
 
 			.calendar-header-col {
-
-				&.col-0,
-				&.col-2 {
-					display: none;
-				}
-
 				.previous-mobile,
 				.next-mobile {
 					display: block;
